Camino only - Bug 424906: Restore Gecko view focus when it is lost during page load. r=murph sr=pink